修改每日构建
修改每日构建，每日3点构建CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,10 @@ env:
   OUT_DIR: "${{ github.workspace }}/out"
 
 on:
-  workflow_dispatch:
-
+  # workflow_dispatch:
+  # 每日3点构建CI
+  schedule:
+    - cron:  '0 3 * * *'
 jobs:
   Set-repos:
     name: "🐂 Parse repos.json"
