Revert "修改每日构建"
This reverts commit 17db1163c35498f4258377339d39de3bdff8b34f.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,10 +4,8 @@ env:
   OUT_DIR: "${{ github.workspace }}/out"
 
 on:
-  # workflow_dispatch:
-  # 每日3点构建CI
-  schedule:
-    - cron:  '0 3 * * *'
+  workflow_dispatch:
+
 jobs:
   Set-repos:
     name: "🐂 Parse repos.json"
