--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,12 @@ env:
 
 on:
   workflow_dispatch:
+    inputs:
+      days:
+        description: "Number of days."
+        required: true
+        default: "1"
+
 permissions:
   contents: write
 jobs:
