--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ env:
 #         default: "1"
 on:
   schedule:
-    - cron:  '0 23 * * * *'
+    - cron:  '0 23 * * *'
 
 permissions:
   contents: write
