--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,16 +3,13 @@ name: "Build kernels"
 env:
   OUT_DIR: "${{ github.workspace }}/out"
 
-# on:
-#   workflow_dispatch:
-#     inputs:
-#       days:
-#         description: "Number of days."
-#         required: true
-#         default: "1"
 on:
-  schedule:
-    - cron:  '0 23 * * *'
+  workflow_dispatch:
+    inputs:
+      days:
+        description: "Number of days."
+        required: true
+        default: "1"
 
 permissions:
   contents: write
