--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,19 @@
 name: "Build kernels"
 
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       days:
+#         description: "Number of days."
+#         required: true
+#         default: "1"
+on:
+  schedule:
+    - cron: '0 6 * * *'  
+  push:
+
 env:
   OUT_DIR: "${{ github.workspace }}/out"
-
-on:
-  workflow_dispatch:
-    inputs:
-      days:
-        description: "Number of days."
-        required: true
-        default: "1"
 
 permissions:
   contents: write
