--- a/.github/workflows/build_MIU-Kernel.yml
+++ b/.github/workflows/build_MIU-Kernel.yml
@@ -155,6 +155,10 @@ jobs:
         run: |
           echo "PATH Variable: $PATH"
           make ${{ env.args }} ${{ env.DEFCONFIG_NAME }}
+          cd $GITHUB_WORKSPACE/kernel_workspace
+          wget https://github.com/wanggm1234/Android-Kernel-Builder/blob/main/LXC-DOCKER-OPEN-CONFIG.sh
+          chmod 777 LXC-DOCKER-OPEN-CONFIG.sh
+          ./LXC-DOCKER-OPEN-CONFIG.sh android-kernel/arch/arm64/configs/${{ env.KERNEL_CONFIG }} -w
           
       - name: "🎶 Build kernel"
         working-directory: ${{ env.KERNEL_NAME }}
