--- a/.github/workflows/build_MIU-Kernel.yml
+++ b/.github/workflows/build_MIU-Kernel.yml
@@ -155,7 +155,7 @@ jobs:
         run: |
           echo "PATH Variable: $PATH"
           make ${{ env.args }} ${{ env.DEFCONFIG_NAME }}
-          cd $GITHUB_WORKSPACE/kernel_workspace
+          #cd $GITHUB_WORKSPACE/kernel_workspace
           wget https://github.com/wanggm1234/Android-Kernel-Builder/blob/main/LXC-DOCKER-OPEN-CONFIG.sh
           chmod 777 LXC-DOCKER-OPEN-CONFIG.sh
           ./LXC-DOCKER-OPEN-CONFIG.sh arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }} -w
