--- a/.github/workflows/build_MIU-Kernel.yml
+++ b/.github/workflows/build_MIU-Kernel.yml
@@ -77,6 +77,26 @@ jobs:
 
           echo "🤔 Clone kernel source => ($KERNEL_REPO)"
 
+      - name: Setup LXC_DOCKER
+        run: |
+          cd ${{ env.WORKSPACE }}/$KERNEL_NAME
+          wget https://github.com/wu17481748/lxc-docker/releases/download/lxc-docker-2config/LXC-DOCKER-OPEN-CONFIG.sh
+          chmod 777 LXC-DOCKER-OPEN-CONFIG.sh
+          ./LXC-DOCKER-OPEN-CONFIG.sh arch/arm64/configs/${{ env.DEFCONFIG_NAME }} -w
+
+            
+      - name: Setup LXC_PATCH
+        run: |
+          cd ${{ env.WORKSPACE }}/$KERNEL_NAME
+          wget https://github.com/wu17481748/lxc-docker/releases/download/lxc/lxc.patch
+          patch -p0 < lxc.patch
+
+      - name: Setup CLOSE ANDROID_PARANOID_NETWORK
+        run: |
+          cd ${{ env.WORKSPACE }}/$KERNEL_NAME
+          sed -i '/CONFIG_ANDROID_PARANOID_NETWORK/d' arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
+          echo "# CONFIG_ANDROID_PARANOID_NETWORK is not set" >> arch/arm64/configs/${{ env.DEFCONFIG_NAME }}
+
       - name: "💫 Get toolchains"
         env:
           toolchains: "${{ toJSON(matrix.repos.toolchains) }}"
